--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
               <CardHeader className="!p-0">
                   <div style={{backgroundColor: 'var(--primary-red)'}} className="p-8 rounded-t-xl">
                       <h1 className="text-4xl font-bold text-white">Você no Centro de tudo</h1>
-                      <p className="text-white/80 mt-2">Temos uma equipe de <span className="font-bold">vendas especializada</span> para lhe atender e tirar suas dúvidas.</p>
-                      <p className="text-2xl font-semibold text-white mt-4">4020-3538</p>
+                      <p className="text-white/80 mt-2">Temos uma equipe de <span className="font-bold">Ferramenta interativa para simular cenários e calcular metas de NPS.</p>
+                      <p className="text-2xl font-semibold text-white mt-4">Simulador e Projeção de NPS</p>
                   </div>
               </CardHeader>
               <CardContent className="p-6">
