--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
               <CardDescription className="text-red-100 text-lg font-light mt-2">
                 Ferramenta interativa para simular cenários e calcular metas
               </CardDescription>
+              {/* Frase de destaque adicionada aqui */}
+              <p className="mt-4 text-xl md:text-2xl font-bold text-white drop-shadow-md">
+                Se dá pra sonhar, dá pra fazer
+              </p>
             </CardHeader>
             <CardContent className="p-6 md:p-10">
               <Tabs defaultValue="projection">
